--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -21,7 +21,6 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767110.md#1" target="_blank">程晓容：长江白鲟灭绝 中共乃危机源头</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767110.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/1302080345551459-150x120.jpg" align ="left"></a>1月3日，“长江白鲟已灭绝”上了微博热搜，网上一片叹息。有网友说：“熬过白垩纪漫长8000万年却熬不过中共70年，可惜啊！中国人有一片福田却不珍惜。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767482.md#1" target="_blank">廖祖笙：饿饭党说要“全面建成小康社会”</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767482.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/04c8e384b2adb08b903be64764c530c9-150x120.jpg" align ="left"></a>习近平先生，日前你说“要取得决胜全面建成小康社会、实现第一个百年奋斗目标的伟大胜利”，说“2020年是全面建成小康社会和‘十三五’规划圆满收官之年”……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:43 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767385.md#1" target="_blank">【名家专栏】主流媒体的新年决心：停止撒谎</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Front-pages-1189631926-1200x782-150x120.jpg" align ="left"></a>自从唐纳德?川普（特朗普）宣布竞选美国总统以来，主流媒体——显然应该是为了保护我们和自己不受可怕的唐纳德的伤害（尽管川普的参选和总统任期内为他们中的许多人带来了前所未有的好处）——就一直放任自己对几乎所有关于川普总统的报道都进行歪曲、捏造、撒谎和夸大其词。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:53 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770894.md#1" target="_blank">袁斌：中共删帖封号有多疯狂？</a><br></h3>在中共筑起的防火墙内，文网越来越严，删帖封号越来越疯狂，这是众所周知的事。但若问究竟严到何等程度，疯狂到什么地步，许多人恐怕就知道的不是那么全面和具体了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770813.md#1" target="_blank">伍新：红朝总理令怎总不灵？</a><br></h3>户口滥销要恢复，见人理当纠错误。
 注销虽然可马虎，想恢复却再添堵。
 党妈何时认过错，伟光正永不含糊。
@@ -89,5 +88,15 @@
 腥闻薰天奴自干
 先锋活摘肾与肝
 党贵作梦安知惭......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767432.md#1" target="_blank">振玉：寄语台湾</a><br></h3>南歌子.寄愿
+宝岛清清水，
+蓬湖湛湛湾。
+海蓝沙净自由天，
+留得一汪澄澈在人间。
+
+落日云霞美，
+晨风草木鲜。
+勿亲中共染腥膻，
+好待少年圆梦玉山边。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kuujke2745/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kuujke2745/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
